bk_ida/gccida/g2/write_dependence_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2636:4: error: expected ';' after expression
rtx base_term; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2636:5: error: use of undeclared identifier 'base_term'
rtx base_term; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2647:60: error: expected expression
if ( ( unsigned int)mems_in_disjoint_alias_sets_p( *( rtx *)&x[1], *( rtx *)&mem[1]) ) 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2647:76: error: expected expression
if ( ( unsigned int)mems_in_disjoint_alias_sets_p( *( rtx *)&x[1], *( rtx *)&mem[1]) ) 
                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2662:1: error: use of undeclared identifier 'base_term'
base_term = find_base_term( addr_0); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2663:6: error: use of undeclared identifier 'base_term'
if ( base_term ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2665:17: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 67 || ( *( _DWORD *)base_term & 0x400FFFF) == 67108932 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2665:50: error: use of undeclared identifier 'base_term'
if ( *( _WORD *)base_term == 67 || ( *( _DWORD *)base_term & 0x400FFFF) == 67108932 ) 
                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2672:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/alias.c:2673:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/write_dependence_p/src/obj/alias.o] Error 1
